--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-
-
-
 *{
     margin: 0;
     padding: 0;
@@ -41,6 +38,20 @@ body{
     background-color:#a3e4d7;
     font-size: 4rem;
 }
+h2{
+    font-size: 2rem;
+    text-align: center;
+}
+.form-check-label{
+    font-size: 50px;
+}
+
+button.btn{
+    font-size: 30px;
+    color: whitesmoke;
+    background-color: #2471a3;
+    border-radius: 5px 5px;
+}
 
 .products-image img{
     width: 100px;
@@ -66,6 +77,7 @@ body{
     display: flex;
     justify-content:start;
     gap: 30px;
+    
 }
 .button-danger{
     color: red;
